rename token variable
