# docs/swagger.json
@@ -32,6 +32,7 @@
                     "application/json"
                 ],
                 "summary": "Log in a user",
+                "operationId": "log-in",
                 "parameters": [
                     {
                         "description": "User details",
@@ -53,29 +54,6 @@
                 }
             }
         },
-        "/logout": {
-            "post": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
-                "description": "Log out a user and invalidate the token",
-                "produces": [
-                    "application/json"
-                ],
-                "summary": "Log out a user",
-                "operationId": "log-out",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
         "/posts": {
             "get": {
                 "description": "Get a list of all posts",
@@ -87,8 +65,8 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Authentication token",
-                        "name": "Authorization",
+                        "description": "token",
+                        "name": "token",
                         "in": "header",
                         "required": true
                     }
@@ -127,8 +105,8 @@
                     },
                     {
                         "type": "string",
-                        "description": "Authentication token",
-                        "name": "Authorization",
+                        "description": "token",
+                        "name": "token",
                         "in": "header",
                         "required": true
                     }
@@ -155,8 +133,8 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Authentication token",
-                        "name": "Authorization",
+                        "description": "token",
+                        "name": "token",
                         "in": "header",
                         "required": true
                     },
@@ -198,8 +176,8 @@
                     },
                     {
                         "type": "string",
-                        "description": "Authentication token",
-                        "name": "Authorization",
+                        "description": "token",
+                        "name": "token",
                         "in": "header",
                         "required": true
                     }
@@ -230,8 +208,8 @@
                     },
                     {
                         "type": "string",
-                        "description": "Authentication token",
-                        "name": "Authorization",
+                        "description": "token",
+                        "name": "token",
                         "in": "header",
                         "required": true
                     }
@@ -262,6 +240,7 @@
                     "application/json"
                 ],
                 "summary": "Sign up a new user",
+                "operationId": "sign-up",
                 "parameters": [
                     {
                         "description": "User details",
